--- a/templates/index.html
+++ b/templates/index.html
@@ -49,6 +49,26 @@
         <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                 <div class="row justify-content-left">
+                    <div class="col-4 row">
+                        <div style="padding: 6%;" class="col-12">
+                            <input type="file"
+                                   id="summarization_files" name="avatar"
+                                   multiple="multiple">
+                        </div>
+                        <div class="col-12">
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
+                                       value="tf" checked="checked">
+                                <label class="form-check-label" for="inlineRadio1">Basic Term Count</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                                       value="page_rank">
+                                <label class="form-check-label" for="inlineRadio2">Understand Context</label>
+                            </div>
+
+                        </div>
+                    </div>
                     <div class="col-8">
                         <div class="card card-sm">
                             <div class="card-body row no-gutters align-items-center">
@@ -57,7 +77,8 @@
                                 </div>
                                 <!--end of col-->
                                 <div class="col">
-                                    <input class="form-control form-control-sm form-control-borderless" type="search"
+                                    <input class="form-control form-control-sm form-control-borderless"
+                                           id="summary_keywords" type="search"
                                            placeholder="Keywords">
                                 </div>
                                 <!--end of col-->
@@ -68,15 +89,12 @@
                                 <!--end of col-->
                             </div>
                         </div>
-                    </div>
-                    <div class="col-4">
-                        <div style="padding: 6%;">
-                            <input type="file"
-                                   id="summarization_files" name="avatar"
-                                   multiple="multiple">
+                        <div id="summary_tags">
+
                         </div>
                     </div>
-                    <div class="col-12">
+
+                    <div class="col-12" style="margin-top: 2%;">
                         <table id="summarization_table" class="table table-striped table-bordered" style="width:100%">
                             <thead>
                             <tr>
@@ -145,7 +163,6 @@
             }
             setTimeout(function () {
                 next();
-                console.log('going out');
             }, 500);
         },
         function (err) {
