--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,13 @@
 
                         </div>
                     </div>
-                    <div class="col-8">
+                    <div class="form-group row col-2" style="padding: 1%;">
+                        <label for="example-number-input" class="col-6 col-form-label">#Sentences</label>
+                        <div class="col-6">
+                            <input class="form-control" type="number" value="10" id="sentence_count" min="1">
+                        </div>
+                    </div>
+                    <div class="col-6">
                         <div class="card card-sm">
                             <div class="card-body row no-gutters align-items-center">
                                 <div class="col-auto">
